<resources>
    <string name="app_name">Loan</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="dont_have_an_account_nregister_here">Dont\' have an account? Register Here</string>
    <string name="title_activity_home">Home</string>
    <string name="setting">Settings</string>
    <string name="logout">Logout</string>
    <string name="jina_la_ukoo">Jina la ukoo</string>
    <string name="jina_la_kwanza">Jina la kwanza</string>
    <string name="majina_mengine">Majina mengine</string>
    <string name="barua_pepe">Barua pepe</string>
    <string name="namba_ya_simu">Namba ya simu</string>
    <string name="mahala_anapoishi">Mahala anapoishi</string>
    <string name="wilaya">Wilaya</string>
    <string name="mara_ya_kwanza">Mara ya wanza</string>
    <string name="mteja_wa_kujirudia">Mteja wa kujirudia</string>
    <string name="next">Next</string>
    <string name="aina_ya_biashara">Aina ya biashara</string>
    <string name="muda_kwenye_biashara">Muda kwenye biashara</string>
    <string name="eneo_lilipo_biashara">Eneo lilipo biashara</string>
    <string name="kiasi_unachoomba">Kiasi unachoomba</string>
    <string name="ukomo_miezi">Ukomo (miezi)</string>
    <string name="nafahamu_huduma_za_accessbank_tz_kupitia">Nafahamu huduma za accessbank Tz kupitia</string>
    <string name="mteja_wa_accessbank">Mteja wa AccessBank</string>
    <string name="wakala">Wakala</string>
    <string name="mtandao">Mtandao</string>
    <string name="nyingine">Nyingine</string>
    <string name="clear">Clear</string>
    <string name="submit">Submit</string>
    <string name="sahihi_ya_wakala">Sahihi ya Wakala</string>
    <string name="sahihi_ya_mteja">Sahihi ya Mteja</string>
    <string name="textview">TextView</string>
    <string name="Save">Button</string>
    <string name="save">submit</string>
    <string name="first_text">first text</string>
    <string name="second_text">Second Text</string>
</resources>
