<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="abt.dev.loan.Step2Activity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/linearLayout1">
            <EditText
                android:id="@+id/editTextBiashara"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/aina_ya_biashara"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editTextMuda"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/muda_kwenye_biashara"
                android:inputType="number" />

            <EditText
                android:id="@+id/editTextEneo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/eneo_lilipo_biashara"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editTextKiasi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/kiasi_unachoomba"
                android:inputType="number" />


            <EditText
                android:id="@+id/editTextUkomo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/ukomo_miezi"
                android:inputType="number" />

        </LinearLayout>

        <Button
            android:id="@+id/next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:background="@color/colorPrimary"
            android:text="@string/next"
            android:textColor="@color/colorText"
            android:textStyle="bold" />

        <ProgressBar
            android:id="@+id/progressBarStep2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:visibility="gone" />
    </LinearLayout>
</ScrollView>
