<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="abt.dev.loan.Step3Activity">


        <TextView
            android:id="@+id/textViewMteja"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="2dp"
            android:text="@string/sahihi_ya_mteja"
            android:textAlignment="center"
            android:textSize="14sp"
            android:textStyle="bold" />

        <com.github.gcacace.signaturepad.views.SignaturePad
            android:id="@+id/signaturePadMteja"
            android:layout_width="match_parent"
            android:layout_height="150dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/clearButtonMteja"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:background="@color/colorWarning"
                android:text="@string/clear"
                android:textColor="@color/colorText" />

        </LinearLayout>


        <TextView
            android:id="@+id/textViewWakala"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="2dp"
            android:text="@string/sahihi_ya_wakala"
            android:textAlignment="center"
            android:textSize="14sp"
            android:textStyle="bold" />

        <com.github.gcacace.signaturepad.views.SignaturePad
            android:id="@+id/signaturePadWakala"
            android:layout_width="match_parent"
            android:layout_height="150dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <Button
                android:id="@+id/clearButtonWakala"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:background="@color/colorWarning"
                android:text="@string/clear"
                android:textColor="@color/colorText" />


        </LinearLayout>

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimary"
            android:text="@string/save"
            android:textColor="@color/colorText"
            android:textStyle="bold" />

        <ProgressBar
            android:id="@+id/progressBarFinish"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:visibility="gone" />


    </LinearLayout>
</ScrollView>